--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@200;300;400;500;600;700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
 /* Start Gloabel Rules */
 :root {
   --border-link: #fff;
@@ -16,7 +16,19 @@ ul {
 a {
   text-decoration: none;
 }
-
+p {
+  color: rgba(255, 255, 255, 0.7);
+}
+.main-title {
+  color: #fff;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  font-weight: 600;
+  width: fit-content;
+  border-bottom: 2px solid #fff;
+  padding-bottom: 10px;
+  letter-spacing: 3px;
+}
 /* End Gloabel Rules */
 
 /* Start Navigation Bar */
@@ -163,7 +175,7 @@ a {
     position: absolute;
     right: 0;
     top: 0;
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.7);
     padding: 90px 20px;
     height: 100vh;
     transform: translateX(100%);
@@ -197,7 +209,7 @@ a {
   .container .toggle.close span:nth-child(1) {
     position: absolute;
     rotate: 45deg;
-        transition-delay: .4s;
+    transition-delay: 0.4s;
   }
   .container .toggle.close span:nth-child(2) {
     scale: 0;
@@ -243,76 +255,21 @@ a {
   border-radius: 10px;
   background-color: rgba(250, 250, 250, 0.5);
 }
-.slider .slide .content {
-  display: flex;
-  align-items: center;
-  gap: 25px;
-  width: 75%;
-}
-.slider .slide .img {
-  width: 240px;
-  height: 240px;
-  background: url(../img/author_image.jpg) no-repeat;
-  background-position: top;
-  background-size: cover;
-  border-radius: 32px;
-}
-
-.slider .slide .text {
-  flex-grow: 1;
-  color: #fff;
-}
-.slider .slide .text h2 {
-  text-transform: uppercase;
-  margin-bottom: 20px;
-  font-weight: 600;
-  width: fit-content;
-  border-bottom: 2px solid #fff;
-  padding-bottom: 10px;
-  letter-spacing: 3px;
-}
-.slider .slide .text p {
-  text-transform: uppercase;
-  line-height: 1.8;
-  font-size: 15px;
-  font-weight: 300;
-  letter-spacing: 2px;
-}
-
-.slider .slide .text a {
-  padding: 10px;
-  background: none;
-  outline: none;
-  border: 2px solid #fff;
-  color: #fff;
-  margin-top: 30px;
-  font-weight: 300;
-  cursor: pointer;
-  width: fit-content;
-  display: inline-block;
-  text-transform: uppercase;
-}
-
-.slider .slide .text a:nth-of-type(2) {
-  margin-left: 20px;
-  color: #000;
-  background: #fff;
-}
 @media (max-width: 991px) {
   .slider {
     width: 80%;
   }
-  .slider .content {
+  .slider .home .content {
     flex-direction: column;
     text-align: center;
     align-items: center;
   }
-  .slider .slide .img {
+  .slider .home .img {
     height: 170px;
     width: 170px;
     border-radius: 100%;
   }
-  .slider h2 {
+  .slider .home h2 {
     margin: 20px auto;
   }
 }
@@ -324,14 +281,274 @@ a {
     bottom: 0;
   }
 }
+/* End Slider */
+
+/* Start Home */
+.slider .home {
+  padding: 0;
+}
+
+.slider .home .content {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+  width: 75%;
+  height: 500px;
+  padding: 30px 0;
+}
+.slider .home .img {
+  width: 240px;
+  min-height: 240px;
+  background: url(../img/author_image.jpg) no-repeat;
+  background-position: top;
+  background-size: cover;
+  border-radius: 32px;
+}
+
+.slider .home .text {
+  flex-grow: 1;
+  color: #fff;
+}
+
+.slider .home .text p {
+  text-transform: uppercase;
+  line-height: 1.8;
+  font-size: 15px;
+  font-weight: 300;
+  letter-spacing: 2px;
+}
+
+.slider .home .btns {
+  display: flex;
+  justify-content: flex-start;
+  gap: 25px;
+}
+.slider .home .text a {
+  background: none;
+  outline: none;
+  color: #fff;
+  font-weight: 300;
+  cursor: pointer;
+  text-transform: uppercase;
+  position: relative;
+  width: 130px;
+  height: 55px;
+}
+.slider .home .text a span {
+  position: absolute;
+  width: 130px;
+  padding: 15px;
+  left: 0;
+  top: 0;
+  border: 2px solid #fff;
+  transition: all 0.5s ease;
+}
+.slider .home .text a:nth-child(1) span:nth-child(2) {
+  background: #fff;
+  color: #000;
+  clip-path: polygon(100% 0, 100% 0%, 100% 99%, 0% 100%);
+}
+.slider .home .text a:nth-child(1):hover span:nth-child(2) {
+  clip-path: polygon(100% 0, 0 0, 0 100%, 100% 0);
+}
+.slider .home .text a:nth-child(2) span:nth-child(1) {
+  background: #fff;
+  color: #000;
+  z-index: 1;
+  clip-path: polygon(100% 0, 0 0, 0 100%, 100% 0);
+}
+.slider .home .text a:nth-child(2):hover span:nth-child(1) {
+  clip-path: polygon(100% 0, 100% 0%, 100% 99%, 0% 100%);
+}
+
+@media (max-width: 991px) {
+  .slider .home .content {
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+  }
+  .slider .home .img {
+    height: 170px;
+    min-width: 170px;
+    border-radius: 100%;
+  }
+  .slider .home h2 {
+    margin: 20px auto;
+  }
+  .slider .home .btns {
+    justify-content: center;
+  }
+}
 @media (max-width: 408px) {
-  .slider .slide .text a:nth-of-type(2) {
-    margin-left: 0;
+  .slider .home .btns {
+    flex-direction: column;
+    align-items: center;
+    gap: 0;
+  }
+  .slider .home .btns a {
+    margin: 10px 0;
   }
 }
 /* End Slider */
 
+/* Start About */
+.slider .about {
+  padding: 0;
+}
+.slider .about .content {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+.slider .about .text {
+  padding: 20px;
+  flex-grow: 1;
+  color: #fff;
+}
+.slider .about .text p {
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  letter-spacing: 2px;
+  line-height: 1.5;
+}
+.slider .about .skills {
+  margin-top: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  position: relative;
+}
+.slider .about .skills::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 50%;
+  width: 1px;
+  height: 100%;
+  background-color: rgb(255 255 255 / 81%);
+}
+.slider .about .skills > div:not(:first-child) {
+  width: 48%;
+}
+.slider .about .skills span {
+  text-transform: uppercase;
+  margin-bottom: 15px;
+  display: inline-block;
+}
+.slider .about .skills .title {
+  width: 100%;
+}
+.slider .about .skills .progress {
+  width: 100%;
+  background-color: #ccc;
+  height: 20px;
+  margin-bottom: 40px;
+  position: relative;
+}
+.slider .about .skills .progress::before {
+  content: "";
+  position: absolute;
+  left: 0px;
+  top: 0;
+  height: 100%;
+  width: var(--prog);
+  background-color: #5e72ff;
+}
+
+.slider .about .skills .progress::after {
+  content: attr(data-progress);
+  position: absolute;
+  color: #fff;
+  top: -110%;
+  right: 0;
+}
+.slider .about .img {
+  flex-basis: 40%;
+  height: 100%;
+  background: url(../img/SEOanalyticsteam-bro.svg) no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+@media (max-width: 991px) {
+  .slider .about .content {
+    flex-direction: column;
+  }
+  .slider .about .img {
+    height: 230px;
+    background-size: contain;
+    width: 100%;
+    flex-basis: auto;
+  }
+}
+/* End About */
+
+/* Start Work */
+.slider .viewer {
+  padding: 20px;
+}
+.slider .viewer .works {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+}
+.slider .viewer .work {
+  width: 32%;
+  height: 170px;
+  margin-bottom: 2%;
+  background: var(--img) no-repeat;
+  background-size: cover;
+  background-position: center top;
+  position: relative;
+  cursor: pointer;
+}
+.slider .viewer .work.work5 {
+  background-position: right;
+}
+.slider .viewer .view {
+  position: absolute;
+  inset: 0;
+  display: grid;
+  place-content: center;
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  font-size: 25px;
+  transition: all 0.7s ease;
+  opacity: 0;
+}
+.slider .viewer .work:hover .view {
+  opacity: 1;
+}
+
+@media (max-width: 991px) {
+  .slider .viewer .work {
+    width: 48%;
+    margin-bottom: 3%;
+    height: 270px;
+  }
+}
+@media (max-width: 610px) {
+  .slider .viewer .work {
+    width: 100%;
+    margin-bottom: 4%;
+    height: 310px;
+  }
+}
+/* End Work */
+
 .slide .test {
   color: #fff;
   font-size: 2em;
+}
+.slide .svg {
+  background: url(../img/asset841.svg) no-repeat;
+  background-size: contain;
+  width: 100px;
+  height: 100px;
+  color: #fff;
+  font-size: 2em;
+}
+svg {
+  color: #fff;
 }
