--- a/css/style.css
+++ b/css/style.css
@@ -208,15 +208,15 @@ p {
   }
   .container .toggle.close span:nth-child(1) {
     position: absolute;
-    rotate: 45deg;
+    transform: rotate(45deg);
     transition-delay: 0.4s;
   }
   .container .toggle.close span:nth-child(2) {
-    scale: 0;
+    transform: scale(0);
     transform-origin: right;
   }
   .container .toggle.close span:nth-child(3) {
-    rotate: -45deg;
+    transform: rotate(-45deg);
     position: absolute;
   }
 }
